double scroll bar bug fixed

--- a/css/less/components/modal.less
+++ b/css/less/components/modal.less
@@ -58,9 +58,12 @@ MODAL
 .modal.is-active {
 	top: 0%;
 }
+.modal.is-overflow-hidden {
+	overflow: hidden;
+}
 .modal.is-active .modal_close {
 	transition: opacity .6s;
-	transition-delay: .5s;
+	transition-delay: .7s;
 	opacity: 1;
 }
 
