--- a/css/less/extend.less
+++ b/css/less/extend.less
@@ -14,9 +14,8 @@ html {
 }
 body {
 	height: 100%;
+	width: 100%;
 }
-
-
 
 .is-text-center {
 	text-align: center;
