--- a/css/less/layout/main.less
+++ b/css/less/layout/main.less
@@ -5,6 +5,7 @@ MAIN
 */
 
 .main {
+	width: 100%;
 	height: 100%;
 	transition: transform .5s, opacity .5s; 
 }
